# python-package-size-uv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
uv_package_size/: main.py
